[gd_scene load_steps=15 format=3 uid="uid://bmdadt0vxvl3b"]

[ext_resource type="Script" path="res://main.gd" id="1_6uvui"]
[ext_resource type="PackedScene" uid="uid://13p4uma0mu8t" path="res://player.tscn" id="1_qc258"]
[ext_resource type="Texture2D" uid="uid://cys3tcp3wci6y" path="res://sprites/background.png" id="2_1iymq"]
[ext_resource type="PackedScene" uid="uid://coqcdw1d1jhpl" path="res://boss.tscn" id="2_8bp1k"]
[ext_resource type="PackedScene" uid="uid://bhitw10ofj648" path="res://helicopter.tscn" id="3_d340g"]
[ext_resource type="PackedScene" uid="uid://b4l6dn464fq74" path="res://wave_2_fighter.tscn" id="4_0d82b"]
[ext_resource type="PackedScene" uid="uid://dboa2rwl5wndt" path="res://ship.tscn" id="5_2gda6"]
[ext_resource type="AudioStream" uid="uid://biw6vak2nlsvm" path="res://sound/boss_music.mp3" id="5_hmhd1"]
[ext_resource type="PackedScene" uid="uid://cphrfkogrejnv" path="res://title_screen.tscn" id="6_gqvid"]
[ext_resource type="AudioStream" uid="uid://dhwbbb13mgkum" path="res://sound/lone_fighter.mp3" id="8_pbpw6"]
[ext_resource type="AudioStream" uid="uid://be3wxaallji75" path="res://sound/game_over.mp3" id="9_dwio0"]
[ext_resource type="FontFile" uid="uid://bhd7rais7yn2q" path="res://SRAFreePixelFontPack/PixelMiddle.ttf" id="10_ihud0"]
[ext_resource type="FontFile" uid="uid://b08ow6w8xpo8k" path="res://SRAFreePixelFontPack/PixelSmall.ttf" id="11_ko8cx"]
[ext_resource type="PackedScene" uid="uid://b4xjauxt7in2l" path="res://end_screen.tscn" id="14_kprc5"]

[node name="Main" type="Node"]
script = ExtResource("1_6uvui")
boss_scene = ExtResource("2_8bp1k")
helicopter_scene = ExtResource("3_d340g")
jet_scene = ExtResource("4_0d82b")
ship_scene = ExtResource("5_2gda6")

[node name="TitleScreen" parent="." instance=ExtResource("6_gqvid")]

[node name="background" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2(0, 270)

[node name="Sprite2D" type="Sprite2D" parent="background/ParallaxLayer"]
position = Vector2(240, 135)
texture = ExtResource("2_1iymq")

[node name="Player" parent="." instance=ExtResource("1_qc258")]
visible = false
position = Vector2(243, 127)

[node name="BossMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hmhd1")

[node name="WorldMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_pbpw6")

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_dwio0")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EndGameTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="GameOverLabel" type="Label" parent="."]
visible = false
offset_left = 138.0
offset_top = 95.0
offset_right = 350.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(1, 0.215686, 0.0156863, 1)
theme_override_fonts/font = ExtResource("10_ihud0")
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1

[node name="TryAgain" type="Label" parent="."]
visible = false
offset_left = 140.0
offset_top = 148.0
offset_right = 348.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(1, 0.215686, 0.0156863, 1)
theme_override_fonts/font = ExtResource("11_ko8cx")
theme_override_font_sizes/font_size = 32
text = "Press space to restart"

[node name="end_screen" parent="." instance=ExtResource("14_kprc5")]

[connection signal="done" from="TitleScreen" to="." method="_on_title_screen_done"]
[connection signal="killed" from="Player" to="." method="_on_player_killed"]
[connection signal="finished" from="GameOverMusic" to="." method="_on_game_over_music_finished"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="EndGameTimer" to="." method="_on_end_game_timer_timeout"]
